<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.markodojkic</groupId>
    <artifactId>softwaredevelopmentsimulation</artifactId>
    <version>1.0-SNAPSHOT</version>
    <url>
        https://github.com/MarkoDojkic/Software-Development-Simulation
    </url>
    <developers>
        <developer>
            <id>markodojkic</id>
            <name>Marko Dojkić</name>
            <email>marko.dojkic@gmail.com</email>
            <roles>
                <role>Project founder and lead developer</role>
            </roles>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:scm:git:git://github.com/MarkoDojkic/Software-Development-Simulation.git</connection>
        <developerConnection>scm:git:scm:git:ssh://git@github.com:MarkoDojkic/Software-Development-Simulation.git</developerConnection>
        <url>https://github.com/MarkoDojkic/Software-Development-Simulation</url>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/MarkoDojkic/Software-Development-Simulation/issues</url>
    </issueManagement>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.integration</groupId>
            <artifactId>spring-integration-core</artifactId>
            <version>6.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.integration</groupId>
            <artifactId>spring-integration-stream</artifactId>
            <version>6.2.4</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.17.0</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.32</version>
        </dependency>
        <dependency>
            <groupId>com.diogonunes</groupId>
            <artifactId>JColor</artifactId>
            <version>5.5.1</version>
        </dependency>
        <dependency>
            <groupId>com.thedeanda</groupId>
            <artifactId>lorem</artifactId>
            <version>2.2</version>
        </dependency>
    </dependencies>
</project>